--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,1 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is a simple teaching tool I designed for coding workshops. It prevents me from frantically scanning the room, trying to decide whether the class is ready to move on. When they've finished with a task, they can check in and then play around on their laptops without me thinking they're still working.
